# rag-shootout

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: methodology.md
notebooks/: rag_shootout.ipynb
scripts/: run_benchmark.py
src/rag_shootout/: __init__.py  config.py  pageindex_pipeline.py  pdf_utils.py  questions.py  scoring.py  vector_pipeline.py  visualization.py
tests/: conftest.py  test_pageindex_pipeline.py  test_pdf_utils.py  test_scoring.py  test_vector_pipeline.py
