[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rag-shootout"
version = "0.1.0"
description = "Head-to-head benchmark of Vector RAG vs. PageIndex retrieval on a real research paper"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "openai>=1.30",
    "sentence-transformers>=2.7",
    "pypdf>=4.2",
    "pageindex>=0.1",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "rank-bm25>=0.2.2",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "black>=24.0",
    "ruff>=0.4",
]

[project.scripts]
rag-benchmark = "scripts.run_benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/rag_shootout --cov-report=term-missing"
